--- a/payment.html
+++ b/payment.html
@@ -8,15 +8,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-5Q28K75Q');</script>
 <!-- End Google Tag Manager -->
-  <!-- Google tag (gtag.js) -->
+
+<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-T5N1WSXDXL"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'G-T5N1WSXDXL');
 </script>
+
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>TechStore - Payment</title>
@@ -25,16 +26,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <script src="https://cdn.tailwindcss.com"></script>
 
 <style>
-body {
-  <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5Q28K75Q"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
-  font-family: 'Poppins', sans-serif; }
+body { font-family: 'Poppins', sans-serif; }
 </style>
 </head>
 
 <body class="bg-gray-100">
+
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5Q28K75Q"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 
 <!-- NAVBAR -->
 <nav class="bg-gradient-to-r from-purple-600 to-blue-600 text-white p-4">
@@ -55,33 +56,48 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
   <div class="bg-white p-6 rounded-xl shadow-xl max-w-xl mx-auto">
 
-    <p class="text-lg font-semibold mb-4">
-      Total Amount: 
-      <span class="text-purple-600">$<span id="amount">0.00</span></span>
-    </p>
+    <!-- ⭐ FORM BEGINS HERE ⭐ -->
+    <form id="paymentForm" onsubmit="submitPayment(event)">
 
-    <label class="font-semibold">Card Number</label>
-    <input class="w-full border p-2 rounded mb-4" placeholder="1234 5678 9012 3456">
+      <p class="text-lg font-semibold mb-4">
+        Total Amount: 
+        <span class="text-purple-600">$<span id="amount">0.00</span></span>
+      </p>
 
-    <label class="font-semibold">Name on Card</label>
-    <input class="w-full border p-2 rounded mb-4" placeholder="John Doe">
+      <label class="font-semibold">Card Number</label>
+      <input class="w-full border p-2 rounded mb-4" 
+             placeholder="1234 5678 9012 3456" 
+             required>
 
-    <label class="font-semibold">CVV</label>
-    <input class="w-full border p-2 rounded mb-4" placeholder="123">
+      <label class="font-semibold">Name on Card</label>
+      <input class="w-full border p-2 rounded mb-4" 
+             placeholder="John Doe"
+             required>
 
-    <label class="font-semibold">Expiry Date</label>
-    <input class="w-full border p-2 rounded mb-4" placeholder="MM/YY">
+      <label class="font-semibold">CVV</label>
+      <input class="w-full border p-2 rounded mb-4" 
+             placeholder="123"
+             maxlength="3"
+             required>
 
-    <button onclick="completePayment()" 
-      class="w-full bg-purple-600 hover:bg-purple-700 text-white py-3 rounded-lg font-semibold mt-4">
-      Pay Now
-    </button>
+      <label class="font-semibold">Expiry Date</label>
+      <input class="w-full border p-2 rounded mb-4" 
+             placeholder="MM/YY"
+             required>
+
+      <button type="submit"
+        class="w-full bg-purple-600 hover:bg-purple-700 text-white py-3 rounded-lg font-semibold mt-4">
+        Pay Now
+      </button>
+
+    </form>
+    <!-- ⭐ FORM ENDS HERE ⭐ -->
 
   </div>
 </div>
 
 <script>
-// Load total amount from cart
+// Calculate total amount
 const products = [
   { price:79.99 },
   { price:199.99 },
@@ -97,10 +113,21 @@ let total = 0;
 cart.forEach(id => total += products[id].price);
 document.getElementById("amount").innerText = total.toFixed(2);
 
-// Complete payment
-function completePayment() {
+// FORM SUBMISSION FUNCTION
+function submitPayment(event) {
+  event.preventDefault(); // stop normal reload
+
+  // Trigger GTM form submission event
+  dataLayer.push({
+    event: "payment_form_submitted"
+  });
+
   alert("Payment Successful! Thank you for your purchase.");
+
+  // Clear cart
   localStorage.removeItem("cart");
+
+  // Redirect after success
   window.location.href = "home.html";
 }
 </script>
